# custom_TLDR_app

./: .env.example  .gitignore  README.md  index.html  pyproject.toml
.github/workflows/: publish-reports.yml
assets/css/: style.css  style.css.map
config/: sources.example.yaml  sources.yaml  topics.example.yaml  topics.yaml
jekyll/: Gemfile  _config.yml
jekyll/_layouts/: default.html  report.html
jekyll/assets/css/: style.scss
reports/2026/12/: news.md  papers.md  social_posts.md  weekly_report.json  weekly_report.md
reports/2026/13/: news.md  papers.md  social_posts.md  weekly_report.json  weekly_report.md
reports/2026/14/: news.md  papers.md  weekly_report.json
reports/2026/14/news/: index.html
reports/2026/14/papers/: index.html
reports/2026/15/: news.md  papers.md  weekly_report.json
reports/2026/15/news/: index.html
reports/2026/15/papers/: index.html
reports/2026/16/: news.md  papers.md  weekly_report.json
reports/2026/16/news/: index.html
scripts/: build_jekyll_site.py  run_and_email.sh
src/tldr_feed/: __init__.py  cli.py  config.py  content_extraction.py  emailing.py  language.py  models.py  pipeline.py  relevance.py  reporting.py  storage.py  summarization.py  utils.py
src/tldr_feed/sources/: __init__.py  arxiv.py  base.py  crossref.py  google_scholar.py  linkedin_import.py  linkedin_posts.py  news_rss.py  openalex.py  scopus.py  semantic_scholar.py
tests/: test_config.py  test_content_extraction.py  test_feed_sources.py  test_pipeline.py  test_sources.py  test_summarization.py  verify_summarization_fix.py
(+4 files in other folders)
