[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "tldr-feed"
version = "0.1.0"
description = "Generic weekly research TLDR automation for papers and social posts."
readme = "README.md"
requires-python = ">=3.12"
authors = [{ name = "Codex" }]

[project.scripts]
tldr-feed = "tldr_feed.cli:main"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]
